# URFU-MocroHelper

./: Makefile  pyproject.toml  test.py
.ci/: Dockerfile
.ci/entrypoints/: start.sh
docker/: docker-compose.yml
src/: main.py
src/feature/get_last_detection_service/: __init__.py  di.py  dto.py  service.py
src/feature/get_server_info/: __init__.py  di.py  dto.py  service.py
src/shared/api/: mongo_db.py
src/shared/api/yandex/get_potential_targets/: __init__.py  di.py  service.py
src/shared/api/yandex/map/: __init__.py  client.py
src/shared/configs/: __init__.py  _settings.py
